# secu_deck_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
SecuDeck-Chatbot/: .gitignore  bot.py  knowledge.py  railway.toml  requirements.txt
SecuDeck-schedulebot/: COMMANDS.md  bot.py  database.py
SecuDeck-schedulebot/commands/: __init__.py  schedule_commands.py
bots/argos_self_audit/: Dockerfile  README.md  pyproject.toml  railway.toml
bots/argos_self_audit/checks/: kisa_checks.yaml  pii_patterns.yaml  pipa_articles.yaml  secret_patterns.yaml
bots/argos_self_audit/src/argos_self_audit/: __init__.py  commands.py  compliance_mapper.py  dependency_checker.py  github_webhook.py  internal_handlers.py  main.py  repo_scanner.py  reporter.py  scheduler.py  ui.py
bots/chief_of_staff/: Dockerfile  README.md  pyproject.toml  railway.toml
bots/chief_of_staff/src/chief_of_staff/: __init__.py  commands.py  delegator.py  intent_router.py  main.py  synthesizer.py  ui.py
bots/code_sentinel/: Dockerfile  README.md  pyproject.toml  railway.toml
bots/code_sentinel/prompts/: kisa_compliance.md  review_general.md  review_security.md  system_base.md  test_generation.md
bots/code_sentinel/rules/: argos_patterns.yaml  kisa_guidelines.yaml  pipa_articles.yaml
bots/code_sentinel/src/code_sentinel/: __init__.py  commands.py  escalator.py  github_fetcher.py  internal_handlers.py  language_detector.py  main.py  reviewer.py  rule_matcher.py  ui.py
bots/design_echo/: Dockerfile  README.md  pyproject.toml  railway.toml
bots/design_echo/design_system/: components.yaml  tokens.yaml  tone_guide.yaml
bots/design_echo/prompts/: consistency_check.md  copy_review.md  handoff_spec.md  system_base.md
bots/design_echo/src/design_echo/: __init__.py  commands.py  consistency_checker.py  copy_reviewer.py  design_system.py  internal_handlers.py  main.py  spec_generator.py  ui.py
bots/interview_companion/: Dockerfile  README.md  pyproject.toml  railway.toml
bots/interview_companion/data/: argos_hypotheses.yaml
bots/interview_companion/migrations/: 001_interviews.sql
bots/interview_companion/prompts/: log_summary.md  pattern_analysis.md  prep_guide.md
bots/interview_companion/src/interview_companion/: __init__.py  commands.py  insight_extractor.py  internal_handlers.py  interview_logger.py  interview_prep.py  main.py  storage.py  ui.py
bots/pitch_sharpener/: Dockerfile  README.md  pyproject.toml  railway.toml
bots/pitch_sharpener/personas/: budget_reality.yaml  competitor_hunter.yaml  customer_voice.yaml  data_skeptic.yaml  pricing_analyst.yaml  tech_differentiator.yaml
bots/pitch_sharpener/prompts/: quick_diagnosis.md  synthesizer.md  system_base.md
bots/pitch_sharpener/src/pitch_sharpener/: __init__.py  commands.py  document_parser.py  internal_handlers.py  main.py  persona_runner.py  review_engine.py  synthesizer.py  ui.py
bots/schedule_bot/: Dockerfile  README.md  pyproject.toml  railway.toml
bots/schedule_bot/src/schedule_bot/: __init__.py  commands.py  database.py  internal_handlers.py  main.py  reminder.py  ui.py
docs/: ENV_SETUP.md  STAGE_6_SETUP_CHECKLIST.md  webcal-integration-plan.md
docs/known_issues/: cos_intent_router_priority_gaps.md
docs/planning_docs/: 00_OVERVIEW.md  01_INFRASTRUCTURE.md  02_PITCH_SHARPENER.md  03_CODE_SENTINEL.md  04_INTERVIEW_COMPANION.md  05_DESIGN_ECHO.md  06_CHIEF_OF_STAFF.md  07_ARGOS_SELF_AUDIT.md  99_BUILD_ORDER.md
shared/argos_context/: README.md
