[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chief-of-staff"
version = "0.1.0"
description = "5봇 라우팅 메타봇 — Phase 3 (자연어 의도 분류 → 봇 위임)"
requires-python = ">=3.12"

dependencies = [
    "sd-core",
    "discord.py>=2.4",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    # 봇 간 HTTP 호출
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chief_of_staff"]
