[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interview-companion"
version = "0.1.0"
description = "고객 인터뷰 가이드·기록·누적 분석 봇 (Phase 2)"
requires-python = ">=3.12"

dependencies = [
    "sd-core",
    "discord.py>=2.4",
    "anthropic>=0.40",
    "google-genai>=0.3",
    "python-dotenv>=1.0",
    # YAML 가설 로딩
    "pyyaml>=6.0",
    # Postgres
    "asyncpg>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interview_companion"]
